[project]
name = "pr-status"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repl = "pr_status.repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_status"]

[tool.pytest.ini_options]
testpaths = ["tests"]
